--- a/style.css
+++ b/style.css
@@ -1,8 +1,87 @@
+@import url('https://fonts.googleapis.com/css2?family=Andika&family=Inter&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Dela+Gothic+One&display=swap%27');
+
 html, body{
     padding: 0;
     margin: 0;
+    background-color: #eff0e3;
+    font-family: 'Andika', sans-serif;
+    /* font-family: 'Dela Gothic One', cursive; */
 }
 
 header{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     text-align: center;
+}
+
+body{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+
+#capturaTexto, #capturaNumero{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+
+fieldset{
+    width: 600px;
+    align-items: center;
+    border-radius: 10px;
+    border: 3px solid black;
+}
+
+#fieldTexto{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+
+input[type="submit"]{
+    margin: 5px;
+    width: 110px;
+    height: 55;
+
+    background-color: transparent;
+    border-radius: 10px;
+    border: 3px solid black;
+}
+select{
+    border-radius: 10px;
+    border: 3px solid black;
+}
+input[type="text"]{
+    border-radius: 10px;
+    border: 3px solid black;
+}
+input[type="number"]{
+    border-radius: 10px;
+    border: 3px solid black;
+}
+textarea{
+    resize: none;
+    width: 400px;
+    height: 100px;
+    border-radius: 10px;
+    border: 3px solid black;
+}
+
+div{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    text-align: center;
+    width: 600px;
 }
